# magnum-simple-shadows

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_with_emscripten.ps1  build_with_win32.ps1  imgui.ini  serve_emscripten.ps1
cmake/modules/: FindBox2D.cmake  FindCorrade.cmake  FindEGL.cmake  FindGLFW.cmake  FindImGui.cmake  FindMagnum.cmake  FindMagnumIntegration.cmake  FindMagnumPlugins.cmake  FindOpenGLES2.cmake  FindOpenGLES3.cmake
src/: CMakeLists.txt  DebugLines.cpp  DebugLines.h  ShadowCaster.frag  ShadowCaster.vert  ShadowCasterDrawable.cpp  ShadowCasterDrawable.h  ShadowCasterShader.cpp  ShadowCasterShader.h  ShadowLight.cpp  ShadowLight.h  ShadowReceiver.frag  ShadowReceiver.vert  ShadowReceiverDrawable.cpp  ShadowReceiverDrawable.h  ShadowReceiverShader.cpp  ShadowReceiverShader.h  ShadowsExample.cpp  resources.conf
